--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -148,6 +148,18 @@
     <ClCompile Include="TxDetailDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ButtonEx.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="UseListBox.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="RecordListBox.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ReCharge.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -331,6 +343,18 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Z:\dacrs_release\dacrs\src\tinyformat.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ButtonEx.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="UseListBox.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="RecordListBox.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ReCharge.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -649,6 +673,36 @@
       <Filter>资源文件</Filter>
     </None>
     <None Include="res\exit_bj.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\bitmap11.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\p2p_button_1.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\p2p_button_2.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\bother_1.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\bother_2.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\bother_3.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\sister_1.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\sister_2.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\sister_3.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\p2p_but.bmp">
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
