--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -22,7 +22,7 @@
 		"print_timestamps":1
 	},
 	"script":{  
-        "betscript":"3-2",
+        "betscript":"16-1",
 		"darkscript":"3-1",
 		"iposcript":"1-1"
     },
@@ -36,7 +36,8 @@
 	"SendBetFee":53806,
 	"AcceptBetnFee":69407,
 	"OpenBetnFee":74457,
-	"GetAppAmountnFee":32587
+	"GetAppAmountnFee":32587,
+	"GetRechangeFee":32587
 	},
 	"rpccommand": {
 	"getinfo":"getinfo",
