--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -172,6 +172,9 @@
     <ClCompile Include="RecordListBox.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SendListBox.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -379,6 +382,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="RecordListBox.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SendListBox.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -739,6 +745,9 @@
       <Filter>资源文件</Filter>
     </None>
     <None Include="res\red_long_button.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\send_bet_record.bmp">
       <Filter>资源文件</Filter>
     </None>
   </ItemGroup>
