--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -196,6 +196,7 @@
     <None Include="res\rev_logo_3.bmp" />
     <None Include="res\rev_logo_4.bmp" />
     <None Include="res\Send.bmp" />
+    <None Include="res\send_bet_record.bmp" />
     <None Include="res\send_logo_1.bmp" />
     <None Include="res\send_logo_2.bmp" />
     <None Include="res\send_logo_3.bmp" />
@@ -241,6 +242,7 @@
     <ClInclude Include="OutGifDlg.h" />
     <ClInclude Include="ReCharge.h" />
     <ClInclude Include="RecordListBox.h" />
+    <ClInclude Include="SendListBox.h" />
     <ClInclude Include="SendRecord.h" />
     <ClInclude Include="TabCtrl.h" />
     <ClInclude Include="TxDetailDlg.h" />
@@ -338,6 +340,7 @@
     <ClCompile Include="RoundButton.cpp" />
     <ClCompile Include="RpcCmd.cpp" />
     <ClCompile Include="SendDlg.cpp" />
+    <ClCompile Include="SendListBox.cpp" />
     <ClCompile Include="SendRecord.cpp" />
     <ClCompile Include="ShadeButtonST.cpp" />
     <ClCompile Include="SignAccountsDlg.cpp" />
