add number pool
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: c59c764f56d3ed95f7b8d7c8456b2da9da9cc2cf

--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -23,7 +23,7 @@ listen=1
 port=5648
 uiport=2361
 rpcport=17523
-#connect=192.168.1.102:6665
+connect=192.168.1.102:6668
 #connect=192.168.1.102:8869
 #connect=172.23.1.150
 #connect=172.23.1.149
