--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -124,6 +124,10 @@
     <None Include="res\bitmap1.bmp" />
     <None Include="res\bitmap11.bmp" />
     <None Include="res\bitmap4.bmp" />
+    <None Include="res\Bitmap_begin.bmp" />
+    <None Include="res\Bitmap_end.bmp" />
+    <None Include="res\Bitmap_next.bmp" />
+    <None Include="res\Bitmap_up.bmp" />
     <None Include="res\bother_1.bmp" />
     <None Include="res\bother_2.bmp" />
     <None Include="res\bother_3.bmp" />
