--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -750,6 +750,18 @@
     <None Include="res\send_bet_record.bmp">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="res\Bitmap_begin.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\Bitmap_end.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\Bitmap_next.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\Bitmap_up.bmp">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="资源文件">
