修改进度条显示问题
Former-commit-id: 1e84345ed5ae1dd40a825fbfa188bf09aef5dc87

--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -1,18 +1,18 @@
 rpcuser=bitcoin 
 rpcpassword=admin
-regtest=1
+testnet=1
 blockminsize=1000
 zapwallettxes=0
 debug=INFO
-debug=TOUI
-debug=NOUI
+#debug=TOUI
+#debug=NOUI
 #debug=MINER
 #debug=fuel
 #debug=addrman
 #debug=ERROR
 #debug=net
-debug=vm
-debug=CONTRACT_TX
+#debug=vm
+#debug=CONTRACT_TX
 printtoconsole=0
 logtimestamps=1
 logprintfofile=1
@@ -23,7 +23,7 @@ listen=1
 port=5648
 uiport=2361
 rpcport=17523
-connect=192.168.1.102:6668
+#connect=192.168.1.102:6668
 #connect=192.168.1.102:8869
 #connect=172.23.1.150
 #connect=172.23.1.149
