修改弹出框的按钮
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 8cc552b12b70c2c41b93f8859bc0e38e8b05b714

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -184,6 +184,7 @@
     <None Include="res\newaddr-1.bmp" />
     <None Include="res\newaddr-2.bmp" />
     <None Include="res\newaddr-3.bmp" />
+    <None Include="res\out_buttom.bmp" />
     <None Include="res\P2P.bmp" />
     <None Include="res\p2p_button_1.bmp" />
     <None Include="res\p2p_button_2.bmp" />
