--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -22,12 +22,13 @@
 		"print_timestamps":1
 	},
 	"script":{  
-        "betscript":"26812-1",
-		"darkscript":"3-1",
-		"iposcript":"1-1"
+    "betscript":"26812-1",
+	"darkscript":"3-1",
+	"iposcript":"1-1",
+	"redpacketscript":"124-1"
     },
 	"darkcoin": {
-		"SendBuyernFee":43670,
+		"SendBuyernFee":33670,
 		"SendSellernFee":38606,
 		"SendBuyerConfirednFee":53571,
 		"SendBuyerCancelnFee":43571
@@ -38,6 +39,12 @@
 	"OpenBetnFee":84457,
 	"GetAppAmountnFee":42587,
 	"GetRechangeFee":32587
+	},
+	"redpacket": {
+	"sendredcommFee":100000000,
+	"acceptredcommFee":100000000,
+	"sendredspecalFee":100000000,
+	"acceptredspecalFee":100000000
 	},
 	"rpccommand": {
 	"getinfo":"getinfo",
