--- a/bin/qupdater.ini
+++ b/bin/qupdater.ini
@@ -1,6 +1,7 @@
 [QUpdater]
 Langage=qupdatercn.lan
 CheckLostFile=true
+AutoNext=0
 [UPDATEINFO]
 ListURL=http://www.dacrs.com/updata/qupdater.xml
 [APPLICATION]
