修改版本号
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: bd930eaabcbd5e9c03c26000beb5dcdb7ee74167

--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -1,7 +1,6 @@
 rpcuser=smartcoin 
 rpcpassword=admin
-#regtest=1
-testnet=1
+regtest=1
 blockminsize=1000
 zapwallettxes=0
 debug=ERROR
@@ -21,6 +20,7 @@ uiport=12345
 #connect=192.168.1.102:6668
 #port=3001
 appid=26812-1
+appid=124-1
 
 
 
