1.添加脚本的id 2.修改发送接龙红包应用
Signed-off-by: bess <776536184@qq.com>

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -25,7 +25,7 @@
     "betscript":"26812-1",
 	"darkscript":"3-1",
 	"iposcript":"1-1",
-	"redpacketscript":"124-1"
+	"redpacketscript":"165-1"
     },
 	"darkcoin": {
 		"SendBuyernFee":33670,
@@ -37,7 +37,7 @@
 	"SendBetFee":63806,
 	"AcceptBetnFee":89407,
 	"OpenBetnFee":84457,
-	"GetAppAmountnFee":42587,
+	"GetAppAmountnFee":100000000,
 	"GetRechangeFee":32587
 	},
 	"redpacket": {
