--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -4,11 +4,11 @@ regtest=1
 blockminsize=1000
 zapwallettxes=0
 debug=ERROR
-#debug=vm
-#debug=NOUI
+debug=vm
+debug=NOUI
 debug=INFO
-#debug=net
-#debug=CONTRACT_TX
+debug=net
+debug=CONTRACT_TX
 printtoconsole=0
 logtimestamps=1
 logprintfofile=1
@@ -20,7 +20,7 @@ uiport=12345
 #connect=192.168.1.102:6668
 #port=3001
 appid=26812-1
-appid=124-1
+appid=165-1
 
 
 
