1.修改显示抢红包列表的显示的控件
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 8c6caa834072b46dfcf3042cd7d12cb5325fa1fa

--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -190,6 +190,9 @@
     <ClCompile Include="GrabCommRedPacket.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="RedPacketList.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -415,6 +418,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="GrabCommRedPacket.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="RedPacketList.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
