--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -264,6 +264,7 @@
     <ClInclude Include="OutGifDlg.h" />
     <ClInclude Include="ReCharge.h" />
     <ClInclude Include="RecordListBox.h" />
+    <ClInclude Include="RedPacketList.h" />
     <ClInclude Include="RedPacketPoolListBox.h" />
     <ClInclude Include="SendListBox.h" />
     <ClInclude Include="SendRecord.h" />
@@ -364,6 +365,7 @@
     <ClCompile Include="ReceiveDlg.cpp" />
     <ClCompile Include="ReCharge.cpp" />
     <ClCompile Include="RecordListBox.cpp" />
+    <ClCompile Include="RedPacketList.cpp" />
     <ClCompile Include="RedPacketPoolListBox.cpp" />
     <ClCompile Include="RoundButton.cpp" />
     <ClCompile Include="RpcCmd.cpp" />
