添加抢红包资源
Former-commit-id: 99ef87f243eda198fd28835abcb9b8c6a83a4a7c

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -158,6 +158,9 @@
     <None Include="res\exit_bj.bmp" />
     <None Include="res\grab_bt.bmp" />
     <None Include="res\grab_red_packet.bmp" />
+    <None Include="res\grab_rp_log.bmp" />
+    <None Include="res\grab_rp_log_2.bmp" />
+    <None Include="res\grab_rp_log_3.bmp" />
     <None Include="res\green_long_button.bmp" />
     <None Include="res\import_wallet.bmp" />
     <None Include="res\IPO.bmp" />
