--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -25,7 +25,7 @@
     "betscript":"26812-1",
 	"darkscript":"3-1",
 	"iposcript":"1-1",
-	"redpacketscript":"45-1"
+	"redpacketscript":"52799-1"
     },
 	"darkcoin": {
 		"SendBuyernFee":33670,
@@ -37,7 +37,7 @@
 	"SendBetFee":63806,
 	"AcceptBetnFee":89407,
 	"OpenBetnFee":84457,
-	"GetAppAmountnFee":100000000,
+	"GetAppAmountnFee":84457,
 	"GetRechangeFee":32587
 	},
 	"redpacket": {
