--- a/bin/dacrs.conf
+++ b/bin/dacrs.conf
@@ -11,8 +11,8 @@ debug=INFO
 #debug=addrman
 #debug=ERROR
 #debug=net
-#debug=vm
-#debug=CONTRACT_TX
+debug=vm
+debug=CONTRACT_TX
 printtoconsole=0
 logtimestamps=1
 logprintfofile=1
