1.显示抢到红包的列表 2.修改抢红包过程的小费 3.修改刷新按钮的位置
Signed-off-by: bess <776536184@qq.com>

--- a/bin/dacrsclient.conf
+++ b/bin/dacrsclient.conf
@@ -41,10 +41,10 @@
 	"GetRechangeFee":32587
 	},
 	"redpacket": {
-	"sendredcommFee":100000000,
-	"acceptredcommFee":100000000,
-	"sendredspecalFee":100000000,
-	"acceptredspecalFee":100000000
+	"sendredcommFee":1800000,
+	"acceptredcommFee":180000,
+	"sendredspecalFee":430000,
+	"acceptredspecalFee":960000
 	},
 	"rpccommand": {
 	"getinfo":"getinfo",
