--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -198,6 +198,7 @@
     <None Include="res\p2p_list.bmp" />
     <None Include="res\p2p_list_box_but.bmp" />
     <None Include="res\p2p_red_packet.bmp" />
+    <None Include="res\profit_bakgrd.bmp" />
     <None Include="res\progress1.bmp" />
     <None Include="res\progress2.bmp" />
     <None Include="res\progress3.bmp" />
@@ -251,6 +252,7 @@
     <ClInclude Include="AcceptRedPacketRecord.h" />
     <ClInclude Include="AddApp.h" />
     <ClInclude Include="AddrBook.h" />
+    <ClInclude Include="AutoComplete.h" />
     <ClInclude Include="BetRecord.h" />
     <ClInclude Include="BmpBtn.h" />
     <ClInclude Include="BtnST.h" />
@@ -262,6 +264,7 @@
     <ClInclude Include="GrabSpecalRedPacket.h" />
     <ClInclude Include="GuessNum.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="NewMenu.h" />
     <ClInclude Include="NewSendAddr.h" />
     <ClInclude Include="Out.h" />
     <ClInclude Include="OutGifDlg.h" />
@@ -269,9 +272,11 @@
     <ClInclude Include="RecordListBox.h" />
     <ClInclude Include="RedPacketList.h" />
     <ClInclude Include="RedPacketPoolListBox.h" />
+    <ClInclude Include="RPCDlg.h" />
     <ClInclude Include="SendListBox.h" />
     <ClInclude Include="SendRecord.h" />
     <ClInclude Include="SendRedPacketRecord.h" />
+    <ClInclude Include="Subclass.h" />
     <ClInclude Include="TabCtrl.h" />
     <ClInclude Include="TxDetailDlg.h" />
     <ClInclude Include="UseListBox.h" />
@@ -329,6 +334,7 @@
     <ClCompile Include="AcceptRedPacketRecord.cpp" />
     <ClCompile Include="AddApp.cpp" />
     <ClCompile Include="AddrBook.cpp" />
+    <ClCompile Include="AutoComplete.cpp" />
     <ClCompile Include="BetRecord.cpp" />
     <ClCompile Include="BmpBtn.cpp" />
     <ClCompile Include="BtnST.cpp" />
@@ -358,6 +364,7 @@
     <ClCompile Include="MyMutex.cpp" />
     <ClCompile Include="MyQueue.cpp" />
     <ClCompile Include="NewAddressDlg.cpp" />
+    <ClCompile Include="NewMenu.cpp" />
     <ClCompile Include="NewSendAddr.cpp" />
     <ClCompile Include="NoUiMsgBuffer.cpp" />
     <ClCompile Include="Out.cpp" />
@@ -372,6 +379,7 @@
     <ClCompile Include="RedPacketPoolListBox.cpp" />
     <ClCompile Include="RoundButton.cpp" />
     <ClCompile Include="RpcCmd.cpp" />
+    <ClCompile Include="RPCDlg.cpp" />
     <ClCompile Include="SendDlg.cpp" />
     <ClCompile Include="SendListBox.cpp" />
     <ClCompile Include="SendRecord.cpp" />
@@ -386,6 +394,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Subclass.cpp" />
     <ClCompile Include="SynchronousSocket.cpp" />
     <ClCompile Include="TabCtrl.cpp" />
     <ClCompile Include="TradDlg.cpp" />
