1.添加了最小化托盘功能 2.增加了按钮将listcontrol里面的交易类容导出到.xls表格中。 3.在交易详情中添加了时间或者交易类型的查询功能。
Signed-off-by: bess <776536184@qq.com>

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -261,9 +261,16 @@
     <ClInclude Include="BmpBtn.h" />
     <ClInclude Include="BtnST.h" />
     <ClInclude Include="ButtonEx.h" />
+    <ClInclude Include="CApplication.h" />
     <ClInclude Include="CeXDib.h" />
+    <ClInclude Include="CFont0.h" />
     <ClInclude Include="ChangeDPI.h" />
     <ClInclude Include="CommonStruct.h" />
+    <ClInclude Include="CRange.h" />
+    <ClInclude Include="CWorkbook.h" />
+    <ClInclude Include="CWorkbooks.h" />
+    <ClInclude Include="CWorksheet.h" />
+    <ClInclude Include="CWorksheets.h" />
     <ClInclude Include="GrabCommRedPacket.h" />
     <ClInclude Include="GrabSpecalRedPacket.h" />
     <ClInclude Include="GuessNum.h" />
