1.在菜单中添加了配置应用小费和脚本id 2.修改错误的sql语句
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: cc8fac16135cf620c08206a49d87f166645fc6e5

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -287,6 +287,7 @@
     <ClInclude Include="SendListBox.h" />
     <ClInclude Include="SendRecord.h" />
     <ClInclude Include="SendRedPacketRecord.h" />
+    <ClInclude Include="SetAppFee.h" />
     <ClInclude Include="Subclass.h" />
     <ClInclude Include="TabCtrl.h" />
     <ClInclude Include="TxDetailDlg.h" />
@@ -395,6 +396,7 @@
     <ClCompile Include="SendListBox.cpp" />
     <ClCompile Include="SendRecord.cpp" />
     <ClCompile Include="SendRedPacketRecord.cpp" />
+    <ClCompile Include="SetAppFee.cpp" />
     <ClCompile Include="ShadeButtonST.cpp" />
     <ClCompile Include="SignAccountsDlg.cpp" />
     <ClCompile Include="SplashThread.cpp" />
