1.给钱包添加了锁的图片
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: 98e6483f01489ab421b6c3b633119f671cf9e7c0

--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -936,6 +936,15 @@
     <None Include="res\more3.bmp">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="res\bitmap14.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\lock.bmp">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="res\unlock.bmp">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="资源文件">
