--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -124,6 +124,7 @@
     <None Include="res\bitmap1.bmp" />
     <None Include="res\bitmap11.bmp" />
     <None Include="res\bitmap13.bmp" />
+    <None Include="res\bitmap14.bmp" />
     <None Include="res\bitmap4.bmp" />
     <None Include="res\Bitmap_begin.bmp" />
     <None Include="res\Bitmap_end.bmp" />
@@ -173,6 +174,7 @@
     <None Include="res\ipo_app_2.bmp" />
     <None Include="res\ipo_dlg.bmp" />
     <None Include="res\kuang.bmp" />
+    <None Include="res\lock.bmp" />
     <None Include="res\Logo.bmp" />
     <None Include="res\MainUI.bmp" />
     <None Include="res\MainUI_1.bmp" />
@@ -243,6 +245,7 @@
     <None Include="res\tradedetail_logo_3.bmp" />
     <None Include="res\tradedetail_logo_4.bmp" />
     <None Include="res\Trad_dlg.bmp" />
+    <None Include="res\unlock.bmp" />
     <None Include="res\wallet_uipro.bmp" />
     <None Include="res\wndtitlebk.bmp" />
     <None Include="res\xh_2.bmp" />
