--- a/bin/qupdater.ini
+++ b/bin/qupdater.ini
@@ -1,7 +1,8 @@
 [QUpdater]
+LicenseCode=8031-AD60E8
+QuickCheck=false
 Langage=qupdatercn.lan
 CheckLostFile=true
-AutoNext=0
 [UPDATEINFO]
 ListURL=http://www.dacrs.com/updata/qupdater.xml
 [APPLICATION]
