1.重写写一个ipo
Signed-off-by: bess <776536184@qq.com>

Former-commit-id: d52b191d521abfb54d1b36626651d626127e9f16

--- a/DacrsUI/DacrsUI.vcxproj
+++ b/DacrsUI/DacrsUI.vcxproj
@@ -279,6 +279,7 @@
     <ClInclude Include="GrabCommRedPacket.h" />
     <ClInclude Include="GrabSpecalRedPacket.h" />
     <ClInclude Include="GuessNum.h" />
+    <ClInclude Include="IpoCoin.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="NewMenu.h" />
     <ClInclude Include="NewSendAddr.h" />
@@ -371,6 +372,7 @@
     <ClCompile Include="GuessNum.cpp" />
     <ClCompile Include="HeaderCtrlCl.cpp" />
     <ClCompile Include="IndTitleBar.cpp" />
+    <ClCompile Include="IpoCoin.cpp" />
     <ClCompile Include="IpoDlg.cpp" />
     <ClCompile Include="JsonConfigHelp.cpp" />
     <ClCompile Include="json\json_reader.cpp" />
