--- a/DacrsUI/DacrsUI.vcxproj.filters
+++ b/DacrsUI/DacrsUI.vcxproj.filters
@@ -217,6 +217,9 @@
     <ClCompile Include="WalletPassPhrase.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="IpoCoin.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BmpBtn.h">
@@ -490,6 +493,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="WalletPassPhrase.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="IpoCoin.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
